[tool.poetry]
name = "arma_rpt_perf"
version = "0.1.0"
description = ""
authors = ["Oliver Blanthorn <freedom4cows@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
sigfig = "^1.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
